--- a/server/package.json
+++ b/server/package.json
@@ -19,6 +19,10 @@
     "express-validators": "^1.0.4",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.1.7",
-    "multer": "^1.4.4"
+    "multer": "^1.4.4",
+    "socket.io": "^4.5.1"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.16"
   }
 }
